--- a/Crawly/requirements.txt
+++ b/Crawly/requirements.txt
@@ -1,8 +1,12 @@
 beautifulsoup4==4.12.3
 bs4==0.0.2
-certifi==2024.8.30
+certifi==2024.12.14
 charset-normalizer==3.4.0
 idna==3.10
+networkx==3.4.2
+packaging==24.2
+plotly==5.24.1
 requests==2.32.3
 soupsieve==2.6
+tenacity==9.0.0
 urllib3==2.2.3
