--- a/Crawly/requirements.txt
+++ b/Crawly/requirements.txt
@@ -1,13 +1,13 @@
-beautifulsoup4==4.12.3
+beautifulsoup4==4.13.3
 bs4==0.0.2
-certifi==2024.12.14
-charset-normalizer==3.4.0
-idna==3.10
+fake-useragent==2.0.3
+greenlet==3.1.1
+narwhals==1.28.0
 networkx==3.4.2
-numpy==2.2.0
+numpy==2.2.3
 packaging==24.2
-plotly==5.24.1
-requests==2.32.3
+playwright==1.50.0
+plotly==6.0.0
+pyee==12.1.1
 soupsieve==2.6
-tenacity==9.0.0
-urllib3==2.2.3
+typing_extensions==4.12.2
